--- a/style.css
+++ b/style.css
@@ -2759,8 +2759,8 @@ li {
 }
 
 .flowout-tag.flowout-tag-testimonials {
-    background-color: rgba(200, 235, 200, 0.2);
-    color: #c8ebc8;
+    background-color: rgba(255, 222, 89, 0.2);
+    color: #ffde59;
 }
 
 .flowout-tag-wrapper {
